# 615-thermodynamics-project

./: .gitignore  COMPREHENSIVE_TEST_REPORT.md  QUICK_START_EXAMPLES.md  README.md  assumption.md  claude.md  main.py  plan.md  pyproject.toml  requirements.txt  test_refactored_system.py
.github/workflows/: test.yml
.spyproject/config/backups/: workspace.ini.bak
config/: baseline_config.json  optimized_config.json
data/: ashrae_curves.json  weather_example.csv
hvac_components/: README.md  __init__.py  cooling_tower.py  pump.py  run_hvac.py
scripts/: comprehensive_test.py
src/: __init__.py  building_load.py  datacenter.py  gpu_load.py  hvac_system.py  psychrometrics.py  refrigerant.py  refrigerant_cycle.py  utils.py
tests/: test_components.py
